--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "celestialdocs",
+  "name": "gootadocs",
   "type": "module",
   "version": "0.0.5",
   "description": "Documentation template using AstroJS and Shadcn",
-  "author": "Hyperoot <rajesh@hyperoot.dev>",
+  "author": "Pazrin <pazrin@goota.id>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HYP3R00T/CelestialDocs"
+    "url": "https://github.com/goota/GootaDocs"
   },
-  "homepage": "https://celestialdocs.hyperoot.dev/",
+  "homepage": "https://goota.id/",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
